# standingpoint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  GUI.md  LANDSCAPE.md  LICENSE  LISEZMOI.md  PAYSAGE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
assets/: landscape.csv  landscape.md  landscape.vl.json  landscape.yaml  paysage.csv  paysage.md  paysage.vl.json  paysage.yaml
examples/: cloud_providers.csv  cloud_providers.md  cloud_providers.vl.json  cloud_providers.yaml  laptops.csv  laptops.md  laptops.vl.json  laptops.yaml  programming_languages.csv  programming_languages.md  programming_languages.vl.json  programming_languages.yaml  sidekick_landscape.csv  sidekick_landscape.md  sidekick_landscape.vl.json  sidekick_landscape.yaml  voitures_electriques.csv  voitures_electriques.md  voitures_electriques.vl.json  voitures_electriques.yaml
standpoint/: __init__.py  __main__.py  api.py  click_cli.py  i18n.yaml  webgui.py
tests/: test_eval.py  test_gui.py  test_standpoint.py
