[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "standpoint"
description = "Know where each option stands: a labelled 2D positioning map from any comparison table."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Warith Harchaoui" }]
keywords = ["pca", "positioning map", "perceptual map", "quadrant", "vega-lite"]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "vl-convert-python>=1.0",
    "PyYAML>=6.0",
    "langdetect>=1.0.9",
    "ollama>=0.3",
    "click>=8.1",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
# Testing + linting kept light so CI installs fast.
dev = ["pytest>=7.0", "ruff>=0.5"]
# `deepeval` powers the optional pole-naming evaluation in tests/test_eval.py. It is
# a separate, heavier extra: the eval is skipped unless both deepeval and a local
# Ollama model are available, so it runs on a workstation, not in the default CI job.
eval = ["deepeval>=1.0"]
# `gui` powers the browser GUI investigated on the dev-gui branch (standpoint.api +
# standpoint.webgui). The core library and CLIs never import it. python-multipart is
# needed for file uploads; openpyxl for the CSV<->XLSX conversions.
gui = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "openpyxl>=3.1"]

[project.urls]
Homepage = "https://github.com/warith-harchaoui/standingpoint"
Author = "https://www.linkedin.com/in/warith-harchaoui"

[project.scripts]
standpoint = "standpoint:main"
standpoint-click = "standpoint.click_cli:main_click"
standpoint-gui = "standpoint.api:main_gui"

[tool.setuptools]
packages = ["standpoint"]

[tool.setuptools.dynamic]
version = { attr = "standpoint.__version__" }

[tool.setuptools.package-data]
standpoint = ["i18n.yaml"]

[tool.ruff]
# One source of truth for lint + format (Rule 17). 100 cols matches the prose-heavy
# docstrings; target the oldest supported interpreter so no newer syntax slips in.
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative, high-signal set: pyflakes (F), pycodestyle errors/warnings (E/W),
# isort (I), bugbear (B), comprehensions (C4), pyupgrade (UP), simplify (SIM).
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "SIM108", # ternary-over-if/else sometimes hurts readability
    "B008",   # call in arg default is the idiomatic FastAPI pattern (File/Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is idiomatic in pytest
